# reki-bets

./: .env  README.md  api.py  client.py  main.py  nba.py  nfl.py  odds.py  pyproject.toml  spot.txt  system_prompt.txt  ui.py
.streamlit/: config.toml
agent1/: README.md  api.py  client.py  nba.py  nfl.py  odds.py  pyproject.toml  sports_state.json  system_prompt.txt  telegram_bot.py  ui.py
agent2/: agent2_nba_news.json  pyproject.toml  researcher.py  scheduler.py  system_prompt.txt
